--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,11 @@
             android:name=".MeasurementActivity"
             android:screenOrientation="portrait"/>
 
+        <activity
+            android:name=".ViewMeasurements"
+            android:screenOrientation="portrait"/>
+
+
     </application>
 
 </manifest>
